ajustes al backtest